Alignment fix for Guided Path details page

--- a/HexiCloud/public_html/css/hc-usecasediscovery.css
+++ b/HexiCloud/public_html/css/hc-usecasediscovery.css
@@ -93,7 +93,7 @@ and open the template in the editor.
 }
 
 #useCaseDiscoveryPage .inverted-btn {
-    min-width: 97px;
+    min-width: 77px;
     background-color: #FFFFFF;
     color: #F80000;
     font-size: 11px;
